# Harmony-4-Ai-Framework

./: .gitignore  .pre-commit-config.yaml  =23.0.0  CODE_OF_CONDUCT.md  COMPILATION_REPORT.md  CONTRIBUTING.md  CROSS_POST_PROOF.md  DAVNA_COVENANT.md  DEPLOYMENT.md  ETHICAL_INVARIANTS_VERIFICATION.md  FINAL_STATUS.md  FRACTAL_CARE_BOT_INTEGRATION.md  HASH_ANCHOR.md  LICENSE  PROPERTY_BASED_TESTING.md  PROPERTY_BASED_TESTING_QUICKREF.md  PROVENANCE.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SESSION_SUMMARY.md  SUMMARY.md  pyproject.toml  run_math_tests.py  test_final_integration.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.hypothesis/constants/: 374364750f63a861  49188995b7d0a9cb  5ee8da8a0ae35398  7a09b6cae51367b2  899308cd0b0783d6  b70fb1717b18c3d1  dbb76cdc4d44aaff  dd8d04e0a21763f1  fae773ac0e5bfd95
docs/: ethics.md  fractal_care_bot.md  glossary.md  philosophy.md
docs/math/: extensions.md  notation.md  overview.md
docs/notes/: executable-noncoercive-ordering.md
examples/: basic_usage.py  fractal_care_bot_demo.py  heart_field_basic_usage.py
harmony/: __init__.py
harmony/api/: public.py
harmony/core/: coherence.py  consent.py  fractal_care_bot.py  invariants.py
harmony/coupling/: __init__.py  loves_proof.py
harmony/dialogue/: __init__.py  loves_proof.py
harmony/invariants/: __init__.py  consent_locking.py  growth_bounds.py  loves_proof.py  non_coercion.py
harmony/metrics/: __init__.py  coherence.py  stress.py
harmony/models/: phase.py  (+2 more)
heart_field/: __init__.py
scripts/: lint.sh  run_tests.sh  seal_davna.py  type_check.sh  verify_davna.py  verify_ethics.py  verify_hash.py  verify_loves_proof.py
tests/: test_acdc_ops.py  test_coherence.py  test_consent.py  test_consent_gate.py  test_consent_locking_invariant.py  test_field_score.py  test_fractal_care_bot.py  test_fractal_care_bot_invariants.py  test_growth_bounds_invariant.py  test_invariants.py  test_invariants_integration.py  test_loves_proof_clamping.py  test_loves_proof_coupling.py  test_loves_proof_dialogue.py  test_loves_proof_kernel.py  test_loves_proof_physiology.py  test_models.py  test_non_coercion_invariant.py  test_phase_robustness.py  test_phase_tools.py  test_physiology_heart.py  test_plv_bias_correction.py  test_property_based.py  test_safeguards.py  test_stress_index.py
(+31 files in other folders)
