[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmony04"
version = "0.1.0"
description = "An open, ethical framework for modeling coherence, consent, and observer-safe systems"
authors = [
    {name = "HarmonyØ4 Contributors"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "hypothesis>=6.0.0",
    "scipy-stubs>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/harmony04/harmony04"
Documentation = "https://github.com/harmony04/harmony04/tree/main/docs"
Repository = "https://github.com/harmony04/harmony04"
Issues = "https://github.com/harmony04/harmony04/issues"

[tool.setuptools]
packages = [
    "harmony",
    "harmony.core",
    "harmony.models",
    "harmony.safeguards",
    "harmony.api",
    "harmony.physiology",
    "harmony.physiology.heart",
    "harmony.physiology.respiration",
    "harmony.physiology.shared",
    "harmony.invariants",
    "harmony.ops",
    "harmony.coupling",
    "harmony.dialogue",
    "heart_field",
    "heart_field.core",
    "heart_field.utils",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=harmony --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
